--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: Arcanite perks fix
+name: Arcanite-perks-fix
 version: '1.1-SNAPSHOT'
 main: skyxnetwork.arcaniteperksfix.Arcaniteperksfix
 api-version: '1.20'
