--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>skyxnetwork</groupId>
     <artifactId>arcanite-perks-fix</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.3-FINAL</version>
     <packaging>jar</packaging>
 
     <name>arcanite-perks-fix</name>
